<resources>
    <!-- app -->
    <string name="app_name">Lettero</string>
    <string name="app_ci">레트로한 문자, 레터로!</string>

    <!-- kakao -->
    <string name="kakao_native_app_key">9836b85584b8fc691b258ebe20a9031a</string>
    <string name="kakao_login">카카오로 로그인</string>
    <string name="kakao_login_failure">카카오 계정을 확인 해주세요</string>

    <!-- terms of service -->
    <string name="terms_of_service_guide">가입을 진행할 경우, 다음 정책에 동의한 것으로 간주됩니다. 서비스 약관, 개인정보 취급 방침</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- in box -->
    <string name="box">문자함</string>
    <string name="in_box">받은문자</string>
    <string name="out_box">보낸문자</string>

    <!-- send 화면 -->
    <string name="send_title">메세지 작성</string>
    <string name="send_receiver">수신자</string>
    <string name="send_sender">발신자</string>
    <string name="send_msg_hint">메세지를 입력해주세요.</string>
    <string name="send_cnt">%1$d/%2$d</string>
    <string name="send_compelte">전송이 완료되었습니다.</string>
    <string name="send_name_public">발신번호 공개</string>
    <string name="send_name_private">발신번호 비공개</string>
    <string name="private_name">발신번호표시제한</string>

    <!-- 마이 페이지 -->
    <string name="mypage_title">마이페이지</string>
    <string name="profile_edit">프로필 편집</string>
    <string name="manage_block">차단 관리</string>
    <string name="app_setting">앱 설정</string>
    <string name="connect_kakao">카카오톡으로 연결</string>
    <string name="logout">로그아웃</string>
    <string name="resignation">탈퇴하기</string>
    <string name="ask">문의하기</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="terms_of_service">서비스이용약관</string>
    <string name="receive_noti">알림수신</string>

    <string name="edit">편집하기</string>
    <string name="edit_change">변경하기</string>
    <string name="profile_img">프로필 이미지</string>
    <string name="nickname">닉네임</string>
    <string name="phone_number">전화번호</string>

    <string name="complete">완료</string>

    <!-- phone auth -->
    <string name="phone_auth_register">회원가입</string>
    <string name="phone_auth">휴대폰 번호 인증</string>
    <string name="phone_auth_req_info">휴대폰 번호를 입력해 주세요~</string>
    <string name="phone_auth_req">인증 요청</string>
    <string name="phone_auth_result_info">인증번호를 입력해 주세요~</string>
    <string name="phone_auth_check_number">전화번호를 확인해주세요</string>
    <string name="phone_auth_check_code">인증번호를 확인해주세요</string>
    <string name="phone_auth_send_code">인증번호를 전송했습니다.</string>

    <!-- action -->
    <string name="confrim">완료</string>
    <string name="cancel">취소</string>
    <string name="select">선택</string>
    
    <string name="send_msg_err">메시지를 보내는 중 오류가 발생하였습니다. 추후에 다시 시도 해주세요.</string>

    <string name="common_err">에러가 발생하였습니다.\n잠시 후 시도해 주세요</string>
</resources>