<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mypage.MyPageFragment"
    android:background="@color/lettero_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:background="@drawable/common_round"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/profile_edit"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/edit_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/close"
            android:layout_marginTop="36dp"
            android:layout_marginStart="31dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:textSize="20sp"
            android:textColor="@color/send_name"
            android:layout_marginEnd="31dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="74dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/mypage_common_round"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_profile_txt"/>

        <ImageView
            android:id="@+id/edit_profile_img"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@drawable/mypage_profile"
            android:layout_marginTop="10dp"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toBottomOf="@id/guide_profile_txt"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/guide_profile_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_img"
            android:textSize="20sp"
            android:layout_marginTop="91dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_change_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textColor="@color/lettero_grey_3"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="53dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_profile_txt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="67dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_change_img"/>

        <TextView
            android:id="@+id/noti_view"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="97dp"
            android:text="홍길동"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:paddingEnd="28dp"
            android:paddingStart="24dp"
            android:background="@drawable/mypage_common_round"
            android:backgroundTint="@color/send_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_change_img"/>

        <TextView
            android:id="@+id/edit_change_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textColor="@color/lettero_grey_3"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="53dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/noti_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noti_view"/>

        <TextView
            android:id="@+id/edit_profile_number"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="54dp"
            android:text="010-0000-0000"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:paddingEnd="28dp"
            android:paddingStart="24dp"
            android:background="@drawable/mypage_common_round"
            android:backgroundTint="@color/send_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noti_view"/>

        <TextView
            android:id="@+id/edit_change_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_change"
            android:textSize="20sp"
            android:textColor="@color/lettero_grey_3"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="53dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edit_profile_number"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>