<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mypage.MyPageFragment"
    android:background="@color/lettero_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:background="@drawable/common_round"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/mypage_title"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="74dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:background="@drawable/mypage_common_round"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="94dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/mypage_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mypage_profile"
            android:layout_marginTop="105dp"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/mypage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_marginTop="132dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/mypage_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mypage_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="010-0000-0000"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/mypage_profile"
            app:layout_constraintTop_toBottomOf="@id/mypage_name" />

        <Button
            android:id="@+id/mypage_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="55dp"
            android:text="@string/profile_edit"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:drawableEnd="@drawable/next"
            android:paddingEnd="28dp"
            android:paddingStart="24dp"
            android:background="@drawable/mypage_common_round"
            android:backgroundTint="@color/send_box"
            app:layout_constraintTop_toBottomOf="@id/mypage_phone_number"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/mypage_manage_block"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/manage_block"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:drawableEnd="@drawable/next"
            android:paddingEnd="28dp"
            android:paddingStart="24dp"
            android:background="@drawable/mypage_common_round"
            android:backgroundTint="@color/send_box"
            app:layout_constraintTop_toBottomOf="@id/mypage_profile_edit"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/mypage_app_setting"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_setting"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:drawableEnd="@drawable/next"
            android:paddingEnd="28dp"
            android:paddingStart="24dp"
            android:background="@drawable/mypage_common_round"
            android:backgroundTint="@color/send_box"
            app:layout_constraintTop_toBottomOf="@id/mypage_manage_block"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>